[gd_scene load_steps=6 format=4 uid="uid://dfc2r4xndu50b"]

[ext_resource type="Script" uid="uid://dt8gkel7engek" path="res://scenes/storage_file_panel.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://7jsindk8qlar" path="res://textures/icons/document.png" id="2"]
[ext_resource type="Texture2D" uid="uid://dd5guxoabcwt7" path="res://textures/icons/database.png" id="3"]
[ext_resource type="Texture2D" uid="uid://8sorr10f66nw" path="res://textures/icons/money.png" id="4"]
[ext_resource type="Texture2D" uid="uid://b3f52fd42p62t" path="res://textures/icons/trash_bin.png" id="5"]

[node name="StorageFilePanel" type="Panel"]
custom_minimum_size = Vector2(0, 80)
anchor_right = 1.0
offset_bottom = 80.0
grow_horizontal = 2
size_flags_horizontal = 3
mouse_filter = 1
theme_type_variation = &"MenuPanelTitle"
script = ExtResource("1")

[node name="Icon" type="TextureRect" parent="."]
self_modulate = Color(0.567, 0.69465, 0.9, 1)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 16.0
offset_top = -24.0
offset_right = 64.0
offset_bottom = 24.0
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2")
expand_mode = 1

[node name="InfoContainer" type="HBoxContainer" parent="."]
layout_mode = 2
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 79.0
offset_top = -21.0
offset_right = -96.0
offset_bottom = 22.0
theme_override_constants/separation = 20

[node name="Name" type="Label" parent="InfoContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 32
text = "Text"

[node name="SizeContainer" type="HBoxContainer" parent="InfoContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Icon" type="TextureRect" parent="InfoContainer/SizeContainer"]
self_modulate = Color(0.568627, 0.694118, 0.901961, 1)
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
texture = ExtResource("3")
expand_mode = 1

[node name="Value" type="Label" parent="InfoContainer/SizeContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.627451, 0.776471, 0.811765, 1)
text = "0b"

[node name="ValueContainer" type="HBoxContainer" parent="InfoContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Icon" type="TextureRect" parent="InfoContainer/ValueContainer"]
self_modulate = Color(0.568627, 0.694118, 0.901961, 1)
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
texture = ExtResource("4")
expand_mode = 1

[node name="Value" type="Label" parent="InfoContainer/ValueContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.627451, 0.776471, 0.811765, 1)
text = "0/b"

[node name="Delete" type="Button" parent="."]
custom_minimum_size = Vector2(48, 48)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -80.0
offset_top = -40.0
offset_bottom = 40.0
grow_horizontal = 0
grow_vertical = 2
focus_mode = 0
mouse_filter = 1
theme_override_constants/icon_max_width = 48
icon = ExtResource("5")
icon_alignment = 1
expand_icon = true

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="Delete" to="." method="_on_delete_pressed"]
